[package]
name = "axum_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["headers"] }
tokio = { version = "1.18.0", features = ["full"] } 
serde = { version = "1.0.137", features = ["derive"] }
jsonwebtoken = '8.1.0'