[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
mine = "999999999.999999999.999999999"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }