[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.6", features = ["web"] }
console_error_panic_hook = "0.1.7"
tracing = '0.1.34'
tracing-wasm = '0.2.1'
im-rc = "15.1.0"